# docgen

./: pyproject.toml  render.py
data/: readme.md
docgen/: __init__.py  api.py  config.py
